# FulgurMiner

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  FulgurMiner-Linux.sh  FulgurMiner-Windows.bat  FulgurMiner-macOS.command  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pools.example.json  tsconfig.json  vitest.config.ts
.github/workflows/: publish-docker.yml
cuda-poc/: BENCHMARKS.md  CMakeLists.txt  Makefile  PLAN.md  README.md  argon2_block.cuh  argon2_cuda.cu  argon2_memory.cuh  block2_reference.cpp  cuda_helper.cpp  cuda_validation.cpp  device_probe.cu  h0_reference.cpp  library_smoke.cpp  local_miner.cpp  reference_vectors.cpp  vectors.txt
cuda-poc/experimental/: Makefile  PLAN.md  README.md  batch_sweep.cpp  focused_sweep.cpp  persistent_bench.cu  variant_compare.cpp  warp_g_bench.cu
cuda-poc/include/: brc_argon_cuda.h
cuda-poc/reference/: Cargo.toml
cuda-poc/reference/src/: main.rs
gui/: README.md  index.html  install-shortcut.mjs  server.mjs
native/brc-pow/: Cargo.toml  parity-harness.ts
native/brc-pow/src/: main.rs
observability/: PLAN.md  README.md  docker-compose.yml
observability/clickhouse/: init.sql
observability/grafana/dashboards/: miner-overview.json
observability/grafana/provisioning/dashboards/: dashboards.yaml
observability/grafana/provisioning/datasources/: clickhouse.yaml
observability/vector/: vector.yaml
src/chain/: block.test.ts  block.ts  blockchain.ts  boundaryReorg.test.ts  consensus.test.ts  consensus.ts  fork2.clampEndpoint.test.ts  genesis.test.ts  genesis.ts  genesisHash.regression.test.ts  sandglassConstants.test.ts  stateRootBackCompat.test.ts  testutil.ts  transaction.test.ts
src/crypto/: pow.fork2.test.ts  pow.ts
src/minerd/: config.test.ts  config.ts  coordinator.test.ts  cpuBudget.test.ts  cpuBudget.ts  crashGuard.test.ts  crashGuard.ts  cudaGrindPool.ts  demand.test.ts  demand.ts  engine.ts  engineRow.test.ts  envLocal.test.ts  envLocal.ts  fullBlastCaution.test.ts  grindPool.test.ts  grindPool.ts  hardfork.test.ts  helperPool.test.ts  helperPool.ts  http.test.ts  http.ts  index.test.ts  index.ts  link.ts  menu.test.ts  menu.ts  menuCopy.ts  miner.ts  nativeGrindPool.ts  nativeHit.test.ts  nativeParity.test.ts  nativeParity.ts  negotiatedClient.test.ts  negotiatedClient.ts  partition.test.ts  partition.ts  persistence.test.ts  persistence.ts  poolClient.test.ts  (+46 more)
src/util/: binary.ts  merkle.ts
